pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidTypeName4.pkl
class Foo
local Foo2 = Foo
foo2 = new Foo2 {}